--- a/src/content/pages/test.mdx
+++ b/src/content/pages/test.mdx
@@ -1,5 +1,6 @@
 ---
 title: test
+hero_bg: /src/assets/heros/hero-home.svg
 createdAt: 2024-01-15T13:14:28.169Z
 updatedAt: 2024-01-15T13:14:28.169Z
 useProse: true
