--- a/src/content/pages/index_tttt.mdx
+++ b/src/content/pages/index_tttt.mdx
@@ -8,7 +8,7 @@ hero_text: >
   vous propose un espace de `recherche` et de `création` de formules
   singulières, parfois surprenantes, toujours pertinentes pour `épanouir` les
   dynamiques de groupe.
-intro_title: 'KENOBER, ça veut dire coopération (en breton…)'
+intro_title: "KENOBER, ça veut dire coopération (en breton…)"
 intro_text: >
   Alors bien sûr, cela veut dire que nous aimons le beurre salé, mais c’est
   aussi une façon pour nous de raconter que nous concevons toutes nos
@@ -46,7 +46,7 @@ offres:
       alt: Accompagnements à la transformation
   - title: Formations
     base_line: "Nous vous transmettons ce que nous savons et vous outillons autant que possible pour que vous puissiez faire sans nous ce que nous avons fait ensemble.\_"
-    text: '#Expérimentation #Corpus_théorique #Ludique #Concret'
+    text: "#Expérimentation #Corpus_théorique #Ludique #Concret"
     image:
       src: /src/assets/home/offres/offre-4.png
       alt: Formations
@@ -112,4 +112,3 @@ gallery:
   - src: /src/assets/home/gallery/image-6.png
     alt: Image 6
 ---
-
